<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:gravity="center_vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#FFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/tv_blog_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/text_size_12sp"
            tools:text="@string/article_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/dimen_16dp"
            android:paddingEnd="@dimen/dimen_16dp">

            <LinearLayout
                android:id="@+id/user_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_user"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/ic_user_placeholder"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold"
                        tools:text="@string/user_name" />

                    <TextView
                        android:id="@+id/tv_user_designation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size_16sp"
                        tools:text="@string/user_designation" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_article"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_200dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/tv_article_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:textSize="@dimen/text_size_16sp"
                tools:text="@string/article_description" />

            <TextView
                android:id="@+id/tv_article_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:textSize="@dimen/text_size_16sp"
                tools:text="@string/article_title" />

            <TextView
                android:id="@+id/tv_article_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:textSize="@dimen/text_size_16sp"
                tools:text="@string/article_url" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingBottom="@dimen/dimen_5dp">

                <TextView
                    android:id="@+id/tv_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold"
                    tools:text="@string/likes" />

                <TextView
                    android:id="@+id/tv_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold"
                    tools:text="@string/comments" />
            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>